Fix invalid refs

--- a/versions/latest/modules/en/pages/cluster-admin/manage-clusters/clean-cluster-nodes.adoc
+++ b/versions/latest/modules/en/pages/cluster-admin/manage-clusters/clean-cluster-nodes.adoc
@@ -118,7 +118,6 @@ Rather than cleaning registered cluster nodes using the Rancher UI, you can run 
 Install https://kubernetes.io/docs/tasks/tools/install-kubectl/[kubectl].
 ====
 
-
 . Open a web browser, navigate to https://github.com/rancher/rancher/blob/master/cleanup/user-cluster.sh[GitHub], and download `user-cluster.sh`.
 . Make the script executable by running the following command from the same directory as `user-cluster.sh`:
 +
@@ -163,13 +162,13 @@ To remove a node:
 
 If you remove the entire cluster instead of an individual node, or skip rermoving the node through the Rancher UI, follow these steps:
 
-. <<_docker_containers_images_and_volumes,Remove>> the Docker containers from the node and <<mounts,unmount>> any volumes.
+. <<_docker_containers_images_and_volumes,Remove>> the Docker containers from the node and <<_mounts,unmount>> any volumes.
 . Reboot the node.
 . <<_directories_and_files,Remove>> any remaining files.
 . Confirm that network interfaces and IP tables were properly cleaned after the reboot. If not, reboot one more time.
 
 [pass]
-<h3><a class="anchor" href="#_windows_nodes"></a>Windows Nodes</h3>
+<h3><a id="_windows_nodes"></a>Windows Nodes</h3>
 
 
 To clean up a Windows node, run the script in `c:\etc\rancher`. This script deletes Kubernetes-generated resources and the execution binary. It also drops the firewall rules and network settings:
@@ -182,8 +181,9 @@ popd
 
 After you run this script, the node is reset and can be re-added to a Kubernetes cluster.
 
+[#_docker_containers_images_and_volumes]
 [pass]
-<h3><a class="anchor" href="#_docker_containers_images_and_volumes"></a>Docker Containers, Images, and Volumes</h3>
+<h3><a id="_docker_containers_images_and_volumes"></a>Docker Containers, Images, and Volumes</h3>
 
 [CAUTION]
 ====
@@ -197,8 +197,9 @@ docker rmi -f $(docker images -q)
 docker volume rm $(docker volume ls -q)
 ----
 
+[#_mounts]
 [pass]
-<h3><a class="anchor" href="#_mounts"></a>Mounts</h3>
+<h3><a id="_mounts"></a>Mounts</h3>
 
 Kubernetes components and secrets leave behind the following mounts:
 
@@ -222,7 +223,7 @@ You need to remove the following components from Rancher-provisioned RKE2 nodes:
 * RKE2 itself.
 
 [pass]
-<h3><a class="anchor" href="#_removing_rancher-system-agent"></a>Removing rancher-system-agent</h3>
+<h3><a id="_removing_rancher-system-agent"></a>Removing rancher-system-agent</h3>
 
 
 To remove the rancher-system-agent, run the https://github.com/rancher/system-agent/blob/main/system-agent-uninstall.sh[system-agent-uninstall.sh] script:
@@ -232,7 +233,7 @@ curl https://raw.githubusercontent.com/rancher/system-agent/main/system-agent-un
 ----
 
 [pass]
-<h3><a class="anchor" href="#_removing_rke2"></a>Removing RKE2</h3>
+<h3><a id="_removing_rke2"></a>Removing RKE2</h3>
 
 To remove the RKE2 installation, run the `rke2-uninstall` script that is already present on the node:
 
@@ -250,7 +251,7 @@ You need to remove the following components from Rancher-provisioned K3s nodes:
 * K3s itself.
 
 [pass]
-<h3><a class="anchor" href="#_removing_rancher-system-agent"></a>Removing rancher-system-agent</h3>
+<h3><a id="_removing_rancher-system-agent"></a>Removing rancher-system-agent</h3>
 
 
 To remove the rancher-system-agent, run the [system-agent-uninstall.sh](https://github.com/rancher/system-agent/blob/main/system-agent-uninstall.sh) script:
@@ -260,7 +261,7 @@ curl https://raw.githubusercontent.com/rancher/system-agent/main/system-agent-un
 ```
 
 [pass]
-<h3><a class="anchor" href="#_removing_k3s"></a>Removing K3s</h3>
+<h3><a id="_removing_k3s"></a>Removing K3s</h3>
 
 
 To remove the K3s installation, run the `k3s-uninstall` script that is already present on the node:
