--- a/versions/latest/modules/en/pages/cluster-deployment/configuration/k3s.adoc
+++ b/versions/latest/modules/en/pages/cluster-deployment/configuration/k3s.adoc
@@ -301,7 +301,7 @@ spec:
 
 === machineSelectorConfig
 
-`machineSelectorConfig` is the same as <<_machineglobalconfig,`machineGlobalConfig`>> except that a <<kubernetes-node-labels,label>> selector can be specified with the configuration. The configuration will only be applied to nodes that match the provided label selector.
+`machineSelectorConfig` is the same as <<_machineglobalconfig,`machineGlobalConfig`>> except that a <<_kubernetes_node_labels,label>> selector can be specified with the configuration. The configuration will only be applied to nodes that match the provided label selector.
 
 Multiple `config` entries are allowed, each specifying their own `machineLabelSelector`. A user can specify `matchExpressions`, `matchLabels`, both, or neither. Omitting the `machineLabelSelector` section of this field has the same effect as putting the config in the `machineGlobalConfig` section.
 
