--- a/versions/latest/modules/en/pages/cluster-deployment/infra-providers/aws/aws.adoc
+++ b/versions/latest/modules/en/pages/cluster-deployment/infra-providers/aws/aws.adoc
@@ -26,7 +26,7 @@ Tab RKE::
 +
 --
 [pass]
-<h3><a class="anchor" href="#_1_create_your_cloud_credentials"></a>1. Create your cloud credentials</h3>
+<h3><a id="_1_create_your_cloud_credentials"></a>1. Create your cloud credentials</h3>
 
 . Click *☰ > Cluster Management*.
 . Click *Cloud Credentials*.
@@ -40,7 +40,7 @@ Tab RKE::
 *Result:* You have created the cloud credentials that will be used to provision nodes in your cluster. You can reuse these credentials for other node templates, or in other clusters.
 
 [pass]
-<h3><a class="anchor" href="#_2_create_a_node_template_with_your_cloud_credentials_and_information_from_ec2"></a>2. Create a node template with your cloud credentials and information from EC2</h3>
+<h3><a id="_2_create_a_node_template_with_your_cloud_credentials_and_information_from_ec2"></a>2. Create a node template with your cloud credentials and information from EC2</h3>
 
 Creating a xref:cluster-deployment/infra-providers/infra-providers.adoc#_node_templates[node template] for EC2 will allow Rancher to provision new nodes in EC2. Node templates can be reused for other clusters.
 
@@ -56,7 +56,7 @@ If you want to use the https://kubernetes.io/docs/concepts/services-networking/d
 ====
 
 [pass]
-<h3><a class="anchor" href="#_s3_create_a_cluster_with_node_pools_using_the_node_template"></a>3. Create a cluster with node pools using the node template</h3>
+<h3><a id="_s3_create_a_cluster_with_node_pools_using_the_node_template"></a>3. Create a cluster with node pools using the node template</h3>
 
 Add one or more node pools to your cluster. For more information about node pools, see xref:cluster-deployment/infra-providers/infra-providers.adoc[this section.]
 
@@ -79,7 +79,7 @@ Tab RKE2::
 +
 --
 [pass]
-<h3><a class="anchor" href="#_1_create_your_cloud_credentials"></a>1. Create your cloud credentials</h3>
+<h3><a id="_1_create_your_cloud_credentials"></a>1. Create your cloud credentials</h3>
 
 If you already have a set of cloud credentials to use, skip this section.
 
@@ -95,7 +95,7 @@ If you already have a set of cloud credentials to use, skip this section.
 *Result:* You have created the cloud credentials that will be used to provision nodes in your cluster. You can reuse these credentials for other node templates, or in other clusters.
 
 [pass]
-<h3><a class="anchor" href="#_2_create_your_cluster"></a>2. Create your cluster</h3>
+<h3><a id="_2_create_your_cluster"></a>2. Create your cluster</h3>
 
 . Click *☰ > Cluster Management*.
 . On the *Clusters* page, click *Create*.
