--- a/versions/latest/modules/en/pages/installation-and-upgrade/install-rancher.adoc
+++ b/versions/latest/modules/en/pages/installation-and-upgrade/install-rancher.adoc
@@ -221,7 +221,7 @@ Because `rancher` is the default option for `ingress.tls.source`, we are not spe
 * For Kubernetes v1.25 or later, set `global.cattle.psp.enabled` to `false` when using Rancher v2.7.2-v2.7.4. This is not necessary for Rancher v2.7.5 and above, but you can still manually set the option if you choose.
 
 ----
-helm install rancher rancher-<CHART_REPO>/rancher \
+helm install rancher rancher-prime/rancher \
   --namespace cattle-system \
   --set hostname=rancher.my.org \
   --set bootstrapPassword=admin
@@ -271,7 +271,7 @@ When `agent-tls-mode` is set to `strict` (the default value for new installs of 
 
 
 ----
-helm install rancher rancher-<CHART_REPO>/rancher \
+helm install rancher rancher-prime/rancher \
   --namespace cattle-system \
   --set hostname=rancher.my.org \
   --set bootstrapPassword=admin \
@@ -317,7 +317,7 @@ If you want to check if your certificates are correct, see xref:../../../faq/tec
 * For Kubernetes v1.25 or later, set `global.cattle.psp.enabled` to `false` when using Rancher v2.7.2-v2.7.4. This is not necessary for Rancher v2.7.5 and above, but you can still manually set the option if you choose.
 
 ----
-helm install rancher rancher-<CHART_REPO>/rancher \
+helm install rancher rancher-prime/rancher \
   --namespace cattle-system \
   --set hostname=rancher.my.org \
   --set bootstrapPassword=admin \
@@ -333,7 +333,7 @@ helm install rancher rancher-alpha/rancher --devel
 If you are using a Private CA signed certificate , add `--set privateCA=true` to the command:
 
 ----
-helm install rancher rancher-<CHART_REPO>/rancher \
+helm install rancher rancher-prime/rancher \
   --namespace cattle-system \
   --set hostname=rancher.my.org \
   --set bootstrapPassword=admin \
