--- a/versions/latest/modules/en/pages/installation-and-upgrade/other-installation-methods/air-gapped/install-kubernetes.adoc
+++ b/versions/latest/modules/en/pages/installation-and-upgrade/other-installation-methods/air-gapped/install-kubernetes.adoc
@@ -21,7 +21,7 @@ Tab K3s::
 In this guide, we are assuming you have created your nodes in your air gapped environment and have a secure Docker private registry on your bastion server.
 
 [pass]
-<h2><a class="anchor" href="#_1_prepare_images_directory"></a>1. Prepare Images Directory</h2>
+<h2><a id="_1_prepare_images_directory"></a>1. Prepare Images Directory</h2>
 
 Obtain the images tar file for your architecture from the https://github.com/k3s-io/k3s/releases[releases] page for the version of K3s you will be running.
 
@@ -34,7 +34,7 @@ sudo cp ./k3s-airgap-images-$ARCH.tar /var/lib/rancher/k3s/agent/images/
 ----
 
 [pass]
-<h2><a class="anchor" href="#_2_create_registry_yaml"></a>2. Create Registry YAML</h2>
+<h2><a id="_2_create_registry_yaml"></a>2. Create Registry YAML</h2>
 
 Create the registries.yaml file at `/etc/rancher/k3s/registries.yaml`. This will tell K3s the necessary details to connect to your private registry.
 
@@ -63,7 +63,7 @@ Note, at this time only secure registries are supported with K3s (SSL with custo
 For more information on private registries configuration file for K3s, refer to the https://rancher.com/docs/k3s/latest/en/installation/private-registry/[K3s documentation.]
 
 [pass]
-<h2><a class="anchor" href="#_3_install_k3s"></a>3. Install K3s</h2>
+<h2><a id="_3_install_k3s"></a>3. Install K3s</h2>
 
 Rancher needs to be installed on a supported Kubernetes version. To find out which versions of Kubernetes are supported for your Rancher version, refer to the https://www.suse.com/suse-rancher/support-matrix/all-supported-versions/[Rancher Support Matrix].
 
@@ -96,7 +96,7 @@ K3s additionally provides a `--resolv-conf` flag for kubelets, which may help wi
 ====
 
 [pass]
-<h2><a class="anchor" href="#_4_save_and_start_using_the_kubeconfig_file"></a>4. Save and Start Using the kubeconfig File</h2>
+<h2><a id="_4_save_and_start_using_the_kubeconfig_file"></a>4. Save and Start Using the kubeconfig File</h2>
 
 When you installed K3s on each Rancher server node, a `kubeconfig` file was created on the node at `/etc/rancher/k3s/k3s.yaml`. This file contains credentials for full access to the cluster, and you should save this file in a secure location.
 
@@ -138,7 +138,7 @@ kubectl --kubeconfig ~/.kube/config/k3s.yaml get pods --all-namespaces
 For more information about the `kubeconfig` file, refer to the https://rancher.com/docs/k3s/latest/en/cluster-access/[K3s documentation] or the https://kubernetes.io/docs/concepts/configuration/organize-cluster-access-kubeconfig/[official Kubernetes documentation] about organizing cluster access using `kubeconfig` files.
 
 [pass]
-<h2><a class="anchor" href="#_note_on_upgrading"></a>Note on Upgrading</h2>
+<h2><a id="_note_on_upgrading"></a>Note on Upgrading</h2>
 
 Upgrading an air-gap environment can be accomplished in the following manner:
 
@@ -153,7 +153,7 @@ Tab RKE2::
 In this guide, we are assuming you have created your nodes in your air-gapped environment and have a secure Docker private registry on your bastion server.
 
 [pass]
-<h2><a class="anchor" href="#_1_create_rke2_configuration"></a>1. Create RKE2 configuration</h2>
+<h2><a id="_1_create_rke2_configuration"></a>1. Create RKE2 configuration</h2>
 
 Create the config.yaml file at `/etc/rancher/rke2/config.yaml`. This will contain all the configuration options necessary to create a highly available RKE2 cluster.
 
@@ -183,7 +183,7 @@ RKE2 additionally provides a `resolv-conf` option for kubelets, which may help w
 ====
 
 [pass]
-<h2><a class="anchor" href="#_2_create_registry_yaml"></a>2. Create Registry YAML</h2>
+<h2><a id="_2_create_registry_yaml"></a>2. Create Registry YAML</h2>
 
 Create the registries.yaml file at `/etc/rancher/rke2/registries.yaml`. This will tell RKE2 the necessary details to connect to your private registry.
 
@@ -209,7 +209,7 @@ configs:
 For more information on private registries configuration file for RKE2, refer to the https://docs.rke2.io/install/containerd_registry_configuration[RKE2 documentation.]
 
 [pass]
-<h2><a class="anchor" href="#_3_install_rke2"></a>3. Install RKE2</h2>
+<h2><a id="_3_install_rke2"></a>3. Install RKE2</h2>
 
 Rancher needs to be installed on a supported Kubernetes version. To find out which versions of Kubernetes are supported for your Rancher version, refer to the https://rancher.com/support-maintenance-terms/[support maintenance terms.]
 
@@ -239,7 +239,7 @@ systemctl start rke2-server.service
 For more information, refer to the https://docs.rke2.io/install/airgap[RKE2 documentation].
 
 [pass]
-<h2><a class="anchor" href="#_4_save_and_start_using_the_kubeconfig_file"></a>4. Save and Start Using the kubeconfig File</h2>
+<h2><a id="_4_save_and_start_using_the_kubeconfig_file"></a>4. Save and Start Using the kubeconfig File</h2>
 
 When you installed RKE2 on each Rancher server node, a `kubeconfig` file was created on the node at `/etc/rancher/rke2/rke2.yaml`. This file contains credentials for full access to the cluster, and you should save this file in a secure location.
 
@@ -280,7 +280,7 @@ kubectl --kubeconfig ~/.kube/config/rke2.yaml get pods --all-namespaces
 For more information about the `kubeconfig` file, refer to the https://docs.rke2.io/cluster_access[RKE2 documentation] or the https://kubernetes.io/docs/concepts/configuration/organize-cluster-access-kubeconfig/[official Kubernetes documentation] about organizing cluster access using `kubeconfig` files.
 
 [pass]
-<h2><a class="anchor" href="#_note_on_upgrading"></a>Note on Upgrading</h2>
+<h2><a id="_note_on_upgrading"></a>Note on Upgrading</h2>
 
 Upgrading an air-gap environment can be accomplished in the following manner:
 
@@ -295,7 +295,7 @@ Tab RKE::
 We will create a Kubernetes cluster using Rancher Kubernetes Engine (RKE). Before being able to start your Kubernetes cluster, you'll need to install RKE and create a RKE config file.
 
 [pass]
-<h2><a class="anchor" href="#_some_id"></a>TITLE</h2>
+<h2><a id="_some_id"></a>TITLE</h2>
 
 Install RKE by following the instructions in the https://rancher.com/docs/rke/latest/en/installation/[RKE documentation.]
 
@@ -305,7 +305,7 @@ Certified version(s) of RKE based on the Rancher version can be found in the htt
 ====
 
 [pass]
-<h2><a class="anchor" href="#_2_create_an_rke_config_file"></a>2. Create an RKE Config File</h2>
+<h2><a id="_2_create_an_rke_config_file"></a>2. Create an RKE Config File</h2>
 
 From a system that can access ports 22/TCP and 6443/TCP on the Linux host node(s) that you set up in a previous step, use the sample below to create a new file named `rancher-cluster.yml`.
 
@@ -375,7 +375,7 @@ private_registries:
 ----
 
 [pass]
-<h2><a class="anchor" href="#_3_run_rke"></a>3. Run RKE</h2>
+<h2><a id="_3_run_rke"></a>3. Run RKE</h2>
 
 After configuring `rancher-cluster.yml`, bring up your Kubernetes cluster:
 
@@ -384,7 +384,7 @@ rke up --config ./rancher-cluster.yml
 ----
 
 [pass]
-<h2><a class="anchor" href="#_4_save_your_files"></a>4. Save Your Files</h2>
+<h2><a id="_4_save_your_files"></a>4. Save Your Files</h2>
 
 [NOTE]
 .Important:
