--- a/versions/latest/modules/en/pages/installation-and-upgrade/other-installation-methods/air-gapped/install-rancher-ha.adoc
+++ b/versions/latest/modules/en/pages/installation-and-upgrade/other-installation-methods/air-gapped/install-rancher-ha.adoc
@@ -43,7 +43,7 @@ NOTE: Upgrades are not supported to, from, or between Alphas.
 +
 [,plain]
 ----
- helm fetch rancher-<CHART_REPO>/rancher
+ helm fetch rancher-prime/rancher
 ----
 +
 If you require a specific version of Rancher, you can fetch this with the Helm `--version` parameter like in the following example:
