--- a/versions/latest/modules/en/pages/installation-and-upgrade/other-installation-methods/http-proxy/install-kubernetes.adoc
+++ b/versions/latest/modules/en/pages/installation-and-upgrade/other-installation-methods/http-proxy/install-kubernetes.adoc
@@ -142,7 +142,7 @@ sudo systemctl restart docker
 ----
 
 [pass]
-<h2><a class="anchor" href="#_air-gapped_proxy"></a>Air-gapped proxy</h2>
+<h2><a id="_air-gapped_proxy"></a>Air-gapped proxy</h2>
 
 You can now provision node driver clusters from an air-gapped cluster configured to use a proxy for outbound connections.
 
@@ -159,7 +159,7 @@ acl Safe_ports port 2376    # docker port
 ----
 
 [pass]
-<h2><a class="anchor" href="#_creating_the_rke_cluster"></a>Creating the RKE Cluster</h2>
+<h2><a id="_creating_the_rke_cluster"></a>Creating the RKE Cluster</h2>
 
 You need several command line tools on the host where you have SSH access to the Linux nodes to create and interact with the cluster:
 
@@ -224,7 +224,7 @@ You can also verify that your external load balancer works, and the DNS entry is
  default backend - 404
 
 [pass]
-<h2><a class="anchor" href="#_save_your_files"></a>Save Your Files</h2>
+<h2><a id="_save_your_files"></a>Save Your Files</h2>
 
 [NOTE]
 .Important:
