--- a/versions/latest/modules/en/pages/observability/logging/enable-api-audit-log-in-downstream-clusters.adoc
+++ b/versions/latest/modules/en/pages/observability/logging/enable-api-audit-log-in-downstream-clusters.adoc
@@ -12,7 +12,7 @@ Tab RKE2::
 +
 --
 [pass]
-<h2><a class="anchor" href="#_method_1_recommended_set_audit-policy-file_in_machineglobalconfig"></a>Method 1 (Recommended): Set `audit-policy-file` in `machineGlobalConfig`</h2>
+<h2><a id="_method_1_recommended_set_audit-policy-file_in_machineglobalconfig"></a>Method 1 (Recommended): Set `audit-policy-file` in `machineGlobalConfig`</h2>
 
 You can set `audit-policy-file` in the configuration file. Rancher delivers the file to the path `/var/lib/rancher/rke2/etc/config-files/audit-policy-file` in control plane nodes, and sets the proper options in the RKE2 server.
 
@@ -37,7 +37,7 @@ spec:
 ----
 
 [pass]
-<h2><a class="anchor" href="#_method_2_use_the_directives_machineselectorfiles_and_machineglobalconfig"></a>Method 2: Use the Directives, `machineSelectorFiles` and `machineGlobalConfig`</h2>
+<h2><a id="_method_2_use_the_directives_machineselectorfiles_and_machineglobalconfig"></a>Method 2: Use the Directives, `machineSelectorFiles` and `machineGlobalConfig`</h2>
 
 [NOTE]
 ====
