--- a/versions/latest/modules/en/pages/security/psact.adoc
+++ b/versions/latest/modules/en/pages/security/psact.adoc
@@ -26,7 +26,7 @@ Tab RKE2 and K3s::
 . Click *Create*.
 
 [pass]
-<h3><a class="anchor" href="#_assign_a_template_to_an_existing_cluster"></a>Assign a Template to an Existing Cluster</h3>
+<h3><a id="_assign_a_template_to_an_existing_cluster"></a>Assign a Template to an Existing Cluster</h3>
 
 . In the upper left corner, click *☰ > Cluster Management*.
 . Find the cluster you want to update in the *Clusters* table, and click the *⋮*.
@@ -35,7 +35,7 @@ Tab RKE2 and K3s::
 . Click *Save*.
 
 [pass]
-<h3><a class="anchor" href="#_hardening_the_cluster"></a>Hardening the Cluster</h3>
+<h3><a id="_hardening_the_cluster"></a>Hardening the Cluster</h3>
 
 If you select the *rancher-restricted* template but don't select a *CIS Profile*, you won't meet required CIS benchmarks. See the xref:security/hardening-guides/rke2/rke2.adoc[RKE2 hardening guide] for more details.
 --
@@ -51,7 +51,7 @@ Tab RKE1::
 . Click *Create*.
 
 [pass]
-<h3><a class="anchor" href="#_assign_a_template_to_an_existing_cluster"></a>Assign a Template to an Existing Cluster</h3>
+<h3><a id="_assign_a_template_to_an_existing_cluster"></a>Assign a Template to an Existing Cluster</h3>
 
 . In the upper left corner, click *☰ > Cluster Management*.
 . Find the cluster you want to update in the *Clusters* table, and click the *⋮*.
