--- a/versions/latest/modules/en/pages/security/rancher-webhook/rancher-webhook.adoc
+++ b/versions/latest/modules/en/pages/security/rancher-webhook/rancher-webhook.adoc
@@ -86,7 +86,7 @@ These values are synced to the `rancher-config` ConfigMap during installation.
 
 [,bash]
 ----
-helm install rancher rancher-<CHART_REPO>/rancher \
+helm install rancher rancher-prime/rancher \
   --namespace cattle-system \
   ...
   --set webhook.port=9553 \
