--- a/versions/latest/modules/en/pages/cluster-admin/backups-and-restore/backups.adoc
+++ b/versions/latest/modules/en/pages/cluster-admin/backups-and-restore/backups.adoc
@@ -246,7 +246,7 @@ In addition to recurring snapshots, you may want to take a "one-time" snapshot. 
 . Navigate to the `Snapshots` tab and click `Snapshot Now`
 
 [pass]
-<h3><a class="anchor" href="#_how_taking_one_time_snapshots_works"></a>How Taking One-Time Snapshots Works</h3>
+<h3><a id="_how_taking_one_time_snapshots_works"></a>How Taking One-Time Snapshots Works</h3>
 
 On one-time snapshot creation, the Rancher delivers a few sets of plans to perform snapshot creation. A set of phases are used, namely:
 
