--- a/versions/latest/modules/en/pages/cluster-deployment/infra-providers/digitalocean/digitalocean.adoc
+++ b/versions/latest/modules/en/pages/cluster-deployment/infra-providers/digitalocean/digitalocean.adoc
@@ -17,8 +17,9 @@ Tab RKE::
 . <<_2_create_a_node_template_with_your_cloud_credentials,Create a node template with your cloud credentials>>
 . <<_3_create_a_cluster_with_node_pools_using_the_node_template,Create a cluster with node pools using the node template>>
 
+[#_1_create_your_cloud_credentials]
 [pass]
-<h3><a class="anchor" href="#_1_create_your_cloud_credentials"></a>1. Create your cloud credentials</h3>
+<h3><a id="_1_create_your_cloud_credentials"></a>1. Create your cloud credentials</h3>
 
 . Click *☰ > Cluster Management*.
 . Click *Cloud Credentials*.
@@ -29,10 +30,11 @@ Tab RKE::
 
 *Result:* You have created the cloud credentials that will be used to provision nodes in your cluster. You can reuse these credentials for other node templates, or in other clusters.
 
+[#_2_create_a_node_template_with_your_cloud_credentials]
 [pass]
-<h3><a class="anchor" href="#_2_create_a_node_template_with_your_cloud_credentials"></a>2. Create a node template with your cloud credentials</h3>
+<h3><a id="_2_create_a_node_template_with_your_cloud_credentials"></a>2. Create a node template with your cloud credentials</h3>
 
-Creating a xref:cluster-deployment/infra-providers/infra-providers#node-templates[node template] for DigitalOcean will allow Rancher to provision new nodes in DigitalOcean. Node templates can be reused for other clusters.
+Creating a xref:cluster-deployment/infra-providers/infra-providers#_node_templates[node template] for DigitalOcean will allow Rancher to provision new nodes in DigitalOcean. Node templates can be reused for other clusters.
 
 . Click *☰ > Cluster Management*.
 . Click menu:RKE1 Configuration[Node Templates].
@@ -40,8 +42,10 @@ Creating a xref:cluster-deployment/infra-providers/infra-providers#node-template
 . Click *DigitalOcean*.
 . Fill out a node template for DigitalOcean. For help filling out the form, refer to xref:cluster-deployment/infra-providers/digitalocean/node-template-configuration.adoc[DigitalOcean Node Template Configuration.]
 
+[#_3_create_a_cluster_with_node_pools_using_the_node_template]
 [pass]
-<h3><a class="anchor" href="#_3_create_a_cluster_with_node_pools_using_the_node_template"></a>3. Create a cluster with node pools using the node template</h3>
+<a id="_3_create_a_cluster_with_node_pools_using_the_node_template">
+<h3><a id="_3_create_a_cluster_with_node_pools_using_the_node_template"></a>3. Create a cluster with node pools using the node template</h3>
 
 . Click *☰ > Cluster Management*.
 . On the *Clusters* page, click *Create*.
@@ -57,7 +61,7 @@ Tab RKE2::
 +
 --
 [pass]
-<h3><a class="anchor" href="#_1_create_your_cloud_credentials"></a>1. Create your cloud credentials</h3>
+<h3><a id="_1_create_your_cloud_credentials"></a>1. Create your cloud credentials</h3>
 
 If you already have a set of cloud credentials to use, skip this section.
 
@@ -69,7 +73,7 @@ If you already have a set of cloud credentials to use, skip this section.
 . Click *Create*.
 
 [pass]
-<h3><a class="anchor" href="#_2_create_your_cluster"></a>2. Create your cluster</h3>
+<h3><a id="_2_create_your_cluster"></a>2. Create your cluster</h3>
 
 Use Rancher to create a Kubernetes cluster in DigitalOcean.
 
@@ -79,7 +83,7 @@ Use Rancher to create a Kubernetes cluster in DigitalOcean.
 . Click *DigitalOcean*.
 . Select a *Cloud Credential*, if more than one exists. Otherwise, it's preselected.
 . Enter a *Cluster Name*.
-. Create a machine pool for each Kubernetes role. Refer to the xref:cluster-deployment/infra-providers/infra-providers#node-roles[best practices] for recommendations on role assignments and counts.
+. Create a machine pool for each Kubernetes role. Refer to the xref:cluster-deployment/infra-providers/infra-providers#_node_roles[best practices] for recommendations on role assignments and counts.
  .. For each machine pool, define the machine configuration. Refer to the xref:cluster-deployment/infra-providers/digitalocean/machine-configuration.adoc[DigitalOcean machine configuration reference] for information on configuration options.
 . Use the *Cluster Configuration* to choose the version of Kubernetes that will be installed, what network provider will be used and if you want to enable project network isolation. For help configuring the cluster, refer to the xref:cluster-deployment/configuration/rke2.adoc[RKE2 cluster configuration reference.]
 . Use *Member Roles* to configure user authorization for the cluster. Click *Add Member* to add users that can access the cluster. Use the *Role* drop-down to set permissions for each user.
