--- a/versions/latest/modules/en/pages/cluster-deployment/infra-providers/vsphere/create-a-vm-template.adoc
+++ b/versions/latest/modules/en/pages/cluster-deployment/infra-providers/vsphere/create-a-vm-template.adoc
@@ -2,7 +2,7 @@
 
 Creating virtual machines in a repeatable and reliable fashion can often be difficult. VMware vSphere offers the ability to build one VM that can then be converted to a template. The template can then be used to create identically configured VMs. Rancher leverages this capability within node pools to create identical RKE1 and RKE2 nodes.
 
-In order to leverage the template to create new VMs, Rancher has some <<_requirements,specific requirements>> that the VM must have pre-installed. After you configure the VM with these requirements, you will next need to <<preparing-your-vm,prepare the VM>> before <<creating-a-template,creating the template>>. Finally, once preparation is complete, the VM can be <<converting-to-a-template,converted to a template>> and <<moving-to-a-content-library,moved into a content library>>, ready for Rancher node pool usage.
+In order to leverage the template to create new VMs, Rancher has some <<_requirements,specific requirements>> that the VM must have pre-installed. After you configure the VM with these requirements, you will next need to <<_preparing_your_vm,prepare the VM>> before <<_creating_a_template,creating the template>>. Finally, once preparation is complete, the VM can be <<_converting_to_a_template,converted to a template>> and <<_moving_to_a_content_library,moved into a content library>>, ready for Rancher node pool usage.
 
 == Requirements
 
