--- a/versions/latest/modules/en/pages/installation-and-upgrade/installation-and-upgrade.adoc
+++ b/versions/latest/modules/en/pages/installation-and-upgrade/installation-and-upgrade.adoc
@@ -84,19 +84,12 @@ For more architecture recommendations, refer to xref:about-rancher/architecture/
 
 Refer to the xref:installation-and-upgrade/references/helm-chart-options.adoc[Helm chart options] for details on installing Rancher on a Kubernetes cluster with other configurations, including:
 
-* With link:references/helm-chart-options.adoc#api-audit-log[API auditing to record all transactions]
-* With link:references/helm-chart-options.adoc#external-tls-termination[TLS termination on a load balancer]
-* With a link:references/helm-chart-options.adoc#customizing-your-ingress[custom Ingress]
+* With xref:installation-and-upgrade/references/helm-chart-options.adoc#_api_audit_log[API auditing to record all transactions]
+* With xref:installation-and-upgrade/references/helm-chart-options.adoc#_external_tls_termination[TLS termination on a load balancer]
+* With a xref:installation-and-upgrade/references/helm-chart-options.adoc#_customizing_your_ingress[custom Ingress]
 
 In the Rancher installation instructions, we recommend using K3s or RKE to set up a Kubernetes cluster before installing Rancher on the cluster. Both K3s and RKE have many configuration options for customizing the Kubernetes cluster to suit your specific environment. For the full list of their capabilities, refer to their documentation:
 
 * https://rancher.com/docs/rke/latest/en/config-options/[RKE configuration options]
 * https://rancher.com/docs/k3s/latest/en/installation/install-options/[K3s configuration options]
 
-=== More Options for Installations with Docker
-
-Refer to the xref:[docs about options for Docker installs] for details about other configurations including:
-
-* With xref:#_api_audit_log[API auditing to record all transactions]
-* With an xref:installation-and-upgrade/infrastructure-setup/configure-layer-7-nginx-load-balancer.adoc[external load balancer]
-* With a xref:#_persistent_data[persistent data store]
