--- a/versions/latest/modules/en/pages/installation-and-upgrade/other-installation-methods/air-gapped/publish-images.adoc
+++ b/versions/latest/modules/en/pages/installation-and-upgrade/other-installation-methods/air-gapped/publish-images.adoc
@@ -30,14 +30,14 @@ For Rancher servers that will only provision Linux clusters, these are the steps
 . <<_4_populate_the_private_registry,Populate the private registry>>
 
 [pass]
-<h3><a class="anchor" href="#_prerequisites"></a>Prerequisites</h3>
+<h3><a id="_prerequisites"></a>Prerequisites</h3>
 
 These steps expect you to use a Linux workstation that has internet access, access to your private registry, and at least 20 GB of disk space.
 
 If you will use ARM64 hosts, the registry must support manifests. As of April 2020, Amazon Elastic Container Registry does not support manifests.
 
 [pass]
-<h3><a class="anchor" href="#_1_find_the_required_assets_for_your_rancher_version"></a>1. Find the required assets for your Rancher version</h3>
+<h3><a id="_1_find_the_required_assets_for_your_rancher_version"></a>1. Find the required assets for your Rancher version</h3>
 
 . Go to our https://github.com/rancher/rancher/releases[releases page,] find the Rancher v2.x.x release that you want to install, and click *Assets*. Note: Don't use releases marked `rc` or `Pre-release`, as they are not stable for production environments.
 . From the release's *Assets* section, download the following files, which are required to install Rancher in an air gap environment:
@@ -55,8 +55,9 @@ If you will use ARM64 hosts, the registry must support manifests. As of April 20
 | This script loads images from the `rancher-images.tar.gz` file and pushes them to your private registry.
 |===
 
+[#_2_collect_the_cert_manager_image]
 [pass]
-<h3><a class="anchor" href="#_2_collect_the_cert-manager_image"></a>2. Collect the cert-manager image</h3>
+<h3><a id="_2_collect_the_cert-manager_image"></a>2. Collect the cert-manager image</h3>
 
 [NOTE]
 ====
@@ -92,8 +93,9 @@ helm template ./cert-manager-<version>.tgz | awk '$1 ~ /image:/ {print $2}' | se
 sort -u rancher-images.txt -o rancher-images.txt
 ----
 
+[#_3_save_the_images_to_your_workstation]
 [pass]
-<h3><a class="anchor" href="#_3_save_the_images_to_your_workstation"></a>3. Save the images to your workstation</h3>
+<h3><a id="_3_save_the_images_to_your_workstation"></a>3. Save the images to your workstation</h3>
 
 . Make `rancher-save-images.sh` an executable:
 +
@@ -110,10 +112,9 @@ chmod +x rancher-save-images.sh
 +
 *Result:* Docker begins pulling the images used for an air gap install. Be patient. This process takes a few minutes. When the process completes, your current directory will output a tarball named `rancher-images.tar.gz`. Check that the output is in the directory.
 
+[#_4_populate_the_private_registry]
 [pass]
-<h3><a class="anchor" href="#_4_populate_the_private_registry"></a>4. Populate the private registry</h3>
-[pass]
-<h3><a class="anchor" href="#_4_populate_the_private_registry"></a>4. Populate the private registry</h3>
+<h3><a id="_4_populate_the_private_registry"></a>4. Populate the private registry</h3>
 
 Next, you will move the images in the `rancher-images.tar.gz` to your private registry using the scripts to load the images.
 
@@ -148,12 +149,12 @@ Tab Linux and Windows Clusters::
 For Rancher servers that will provision Linux and Windows clusters, there are distinctive steps to populate your private registry for the Windows images and the Linux images. Since a Windows cluster is a mix of Linux and Windows nodes, the Linux images pushed into the private registry are manifests.
 
 [pass]
-<h2><a class="anchor" href="#_windows_steps"></a>Windows Steps</h2>
+<h2><a id="_windows_steps"></a>Windows Steps</h2>
 
 The Windows images need to be collected and pushed from a Windows server workstation.
 
 [pass]
-<h3><a class="anchor" href="#_prerequisites"></a>Prerequisites</h3>
+<h3><a id="_prerequisites"></a>Prerequisites</h3>
 
 These steps expect you to use a Windows Server 1809 workstation that has internet access, access to your private registry, and at least 50 GB of disk space.
 
@@ -163,8 +164,9 @@ Your registry must support manifests. As of April 2020, Amazon Elastic Container
 
 +++<a name="windows-1">++++++</a>+++
 
+[#_1_find_the_required_assets_for_your_rancher_version]
 [pass]
-<h3><a class="anchor" href="#_1_find_the_required_assets_for_your_rancher_version"></a>1. Find the required assets for your Rancher version</h3>
+<h3><a id="_1_find_the_required_assets_for_your_rancher_version"></a>1. Find the required assets for your Rancher version</h3>
 
 . Browse to our https://github.com/rancher/rancher/releases[releases page] and find the Rancher v2.x.x release that you want to install. Don't download releases marked `rc` or `Pre-release`, as they are not stable for production environments.
 . From the release's "Assets" section, download the following files:
@@ -185,7 +187,7 @@ Your registry must support manifests. As of April 2020, Amazon Elastic Container
 +++<a name="windows-2">++++++</a>+++
 
 [pass]
-<h3><a class="anchor" href="#_2_save_the_images_to_your_windows_server_workstation"></a>2. Save the images to your Windows Server workstation</h3>
+<h3><a id="_2_save_the_images_to_your_windows_server_workstation"></a>2. Save the images to your Windows Server workstation</h3>
 
 . Using `powershell`, go to the directory that has the files that were downloaded in the previous step.
 . Run `rancher-save-images.ps1` to create a tarball of all the required images:
@@ -200,7 +202,7 @@ Your registry must support manifests. As of April 2020, Amazon Elastic Container
 +++<a name="windows-3">++++++</a>+++
 
 [pass]
-<h3><a class="anchor" href="#_3_prepare_the_docker_daemon"></a>3. Prepare the Docker daemon</h3>
+<h3><a id="_3_prepare_the_docker_daemon"></a>3. Prepare the Docker daemon</h3>
 
 Append your private registry address to the `allow-nondistributable-artifacts` config field in the Docker daemon (`C:\ProgramData\Docker\config\daemon.json`). Since the base image of Windows images are maintained by the `mcr.microsoft.com` registry, this step is required as the layers in the Microsoft registry are missing from Docker Hub and need to be pulled into the private registry.
 
@@ -219,7 +221,7 @@ Append your private registry address to the `allow-nondistributable-artifacts` c
 +++<a name="windows-4">++++++</a>+++
 
 [pass]
-<h3><a class="anchor" href="#_4_populate_the_private_registry"></a>4. Populate the private registry</h3>
+<h3><a id="_4_populate_the_private_registry"></a>4. Populate the private registry</h3>
 
 Move the images in the `rancher-windows-images.tar.gz` to your private registry using the scripts to load the images.
 
@@ -240,12 +242,12 @@ docker login <REGISTRY.YOURDOMAIN.COM:PORT>
 ----
 
 [pass]
-<h2><a class="anchor" href="#_linux_steps"></a>Linux Steps</h2>
+<h2><a id="_linux_steps"></a>Linux Steps</h2>
 
 The Linux images need to be collected and pushed from a Linux host, but _must be done after_ populating the Windows images into the private registry. These step are different from the Linux only steps as the Linux images that are pushed will actually manifests that support Windows and Linux images.
 
 [pass]
-<h3><a class="anchor" href="#_prerequisites"></a>Prerequisites</h3>
+<h3><a id="_prerequisites"></a>Prerequisites</h3>
 
 You must populate the private registry with the Windows images before populating the private registry with Linux images. If you have already populated the registry with Linux images, you will need to follow these instructions again as they will publish manifests that support Windows and Linux images.
 
@@ -256,7 +258,7 @@ The workstation must have Docker 18.02+ in order to support manifests, which are
 +++<a name="linux-1">++++++</a>+++
 
 [pass]
-<h3><a class="anchor" href="#_1_find_the_required_assets_for_your_rancher_version"></a>1. Find the required assets for your Rancher version</h3>
+<h3><a id="_1_find_the_required_assets_for_your_rancher_version"></a>1. Find the required assets for your Rancher version</h3>
 
 
 . Browse to our https://github.com/rancher/rancher/releases[releases page] and find the Rancher v2.x.x release that you want to install. Don't download releases marked `rc` or `Pre-release`, as they are not stable for production environments. Click *Assets*.
@@ -281,7 +283,7 @@ The workstation must have Docker 18.02+ in order to support manifests, which are
 +++<a name="linux-2">++++++</a>+++
 
 [pass]
-<h3><a class="anchor" href="#_2_collect_all_the_required_images"></a>2. Collect all the required images</h3>
+<h3><a id="_2_collect_all_the_required_images"></a>2. Collect all the required images</h3>
 
 *For Kubernetes Installs using Rancher Generated Self-Signed Certificate:* In a Kubernetes Install, if you elect to use the Rancher default self-signed TLS certificates, you must add the https://artifacthub.io/packages/helm/cert-manager/cert-manager[`cert-manager`] image to `rancher-images.txt` as well. You skip this step if you are using you using your own certificates.
 
@@ -314,7 +316,7 @@ sort -u rancher-images.txt -o rancher-images.txt
 +++<a name="linux-3">++++++</a>+++
 
 [pass]
-<h3><a class="anchor" href="#_3_save_the_images_to_your_workstation"></a>3. Save the images to your workstation</h3>
+<h3><a id="_3_save_the_images_to_your_workstation"></a>3. Save the images to your workstation</h3>
 
 . Make `rancher-save-images.sh` an executable:
 +
@@ -334,7 +336,7 @@ chmod +x rancher-save-images.sh
 +++<a name="linux-4">++++++</a>+++
 
 [pass]
-<h3><a class="anchor" href="#_4_populate_the_private_registry"></a>4. Populate the private registry</h3>
+<h3><a id="_4_populate_the_private_registry"></a>4. Populate the private registry</h3>
 
 Move the images in the `rancher-images.tar.gz` to your private registry using the `rancher-load-images.sh script` to load the images.
 
