--- a/versions/latest/modules/en/pages/installation-and-upgrade/resources/upgrade-cert-manager.adoc
+++ b/versions/latest/modules/en/pages/installation-and-upgrade/resources/upgrade-cert-manager.adoc
@@ -1,5 +1,4 @@
 = Upgrading Cert-Manager
-:doctype: book
 
 Rancher is compatible with the API version cert-manager.io/v1 and was last tested with cert-manager version v1.13.1.
 
@@ -18,7 +17,7 @@ To address these changes, this guide will do two things:
 .Important:
 ====
 
-If you are upgrading cert-manager to the latest version from a version older than 1.5, follow the steps in <<_option_c_upgrade_cert_manager_from_versions_15_and_below,Option C>> below to do so. Note that you do not need to reinstall Rancher to perform this upgrade.
+If you are upgrading cert-manager to the latest version from a version older than 1.5, follow the steps in <<_option_c_upgrade_cert_manager_from_versions_1_5_and_below,Option C>> below to do so. Note that you do not need to reinstall Rancher to perform this upgrade.
 ====
 
 
@@ -158,7 +157,9 @@ The Helm 3 command is as follows:
  --set image.repository=<REGISTRY.YOURDOMAIN.COM:PORT>/quay.io/jetstack/cert-manager-controller
  --set webhook.image.repository=<REGISTRY.YOURDOMAIN.COM:PORT>/quay.io/jetstack/cert-manager-webhook
  --set cainjector.image.repository=<REGISTRY.YOURDOMAIN.COM:PORT>/quay.io/jetstack/cert-manager-cainjector
-----+++<DeprecationHelm2>++++++</DeprecationHelm2>+++
+----
++
++++<DeprecationHelm2>++++++</DeprecationHelm2>+++
 +
 The Helm 2 command is as follows:
 +
@@ -252,7 +253,6 @@ If you are running Kubernetes v1.15 or below, you will need to add the `--valida
 ----
  kubectl apply -f cert-manager-backup.yaml
 ----
-+
 ======
 
 === Option C: Upgrade cert-manager from Versions 1.5 and Below
@@ -274,11 +274,9 @@ Refer to the https://cert-manager.io/docs/usage/cmctl/#migrate-api-version[API v
 . Upgrade cert-manager to v1.7.1 with a normal `helm upgrade`. You may go directly from version 1.5 to 1.7 if desired.
 . Follow the Helm tutorial to https://helm.sh/docs/topics/kubernetes_apis/#updating-api-versions-of-a-release-manifest[update the API version of a release manifest]. The chart release name is `release_name=rancher` and the release namespace is `release_namespace=cattle-system`.
 . In the decoded file, search for `cert-manager.io/v1beta1` and *replace it* with `cert-manager.io/v1`.
-. {blank}
-+
-= Upgrade Rancher normally with `helm upgrade`.
+. Upgrade Rancher normally with `helm upgrade`.
+======
 
-[discrete]
 === Verify the Deployment
 
 Once you've installed cert-manager, you can verify it is deployed correctly by checking the kube-system namespace for running pods:
