--- a/versions/latest/modules/en/pages/installation-and-upgrade/upgrades.adoc
+++ b/versions/latest/modules/en/pages/installation-and-upgrade/upgrades.adoc
@@ -20,8 +20,6 @@ The kubeconfig can also be manually targeted for the intended cluster with the `
 
 Review the list of known issues for each Rancher version, which can be found in the release notes on https://github.com/rancher/rancher/releases[GitHub] and on the https://forums.rancher.com/c/announcements/12[Rancher forums.]
 
-Note that upgrades _to_ or _from_ any chart in the xref:#_helm_chart_repositories[rancher-alpha repository] aren't supported.
-
 === Helm Version
 
 The upgrade instructions assume you are using Helm 3.+++<DeprecationHelm2>++++++</DeprecationHelm2>+++
@@ -56,45 +54,13 @@ You'll use the backup as a restore point if something goes wrong during upgrade.
 
 . Get the repository name that you used to install Rancher.
 +
-For information about the repos and their differences, see xref:#_helm_chart_repositories[Helm Chart Repositories].
-
- ** Latest: Recommended for trying out the newest features
-+
-----
-  helm repo add rancher-latest https://releases.rancher.com/server-charts/latest
-----
-
- ** Stable: Recommended for production environments
-+
-----
-  helm repo add rancher-stable https://releases.rancher.com/server-charts/stable
-----
-
- ** Alpha: Experimental preview of upcoming releases.
-+
-----
-  helm repo add rancher-alpha https://releases.rancher.com/server-charts/alpha
-----
-+
-NOTE: Upgrades are not supported to, from, or between Alphas.
-
-+
 ----
  helm repo list
 
  NAME          	       URL
- stable        	       https://charts.helm.sh/stable
+ rancher-prime         <URL>
  rancher-<CHART_REPO>	 https://releases.rancher.com/server-charts/<CHART_REPO>
 ----
-+
-
-[NOTE]
-====
-+
-If you want to switch to a different Helm chart repository, please follow the xref:#_switching_to_a_different_helm_chart_repository[steps on how to switch repositories]. If you switch repositories, make sure to list the repositories again before continuing onto Step 3 to ensure you have the correct one added.
-+
-====
-
 
 . Fetch the latest chart to install Rancher from the Helm chart repository.
 +
@@ -102,14 +68,14 @@ This command will pull down the latest charts and save it in the current directo
 +
 [,plain]
 ----
- helm fetch rancher-<CHART_REPO>/rancher
+ helm fetch rancher-prime/rancher
 ----
 +
 You can fetch the chart for the specific version you are upgrading to by adding in the `--version=` tag.  For example:
 +
 [,plain]
 ----
- helm fetch rancher-<CHART_REPO>/rancher --version=2.6.8
+ helm fetch rancher-prime/rancher --version=2.6.8
 ----
 
 === 3. Upgrade Rancher
@@ -164,7 +130,7 @@ Take all the values from the previous step and append them to the command using 
 For Kubernetes v1.25 or later, set `global.cattle.psp.enabled` to `false` when using Rancher v2.7.2-v2.7.4. This is not necessary for Rancher v2.7.5 and above, but you can still manually set the option if you choose.
 
 ----
-helm upgrade rancher rancher-<CHART_REPO>/rancher \
+helm upgrade rancher rancher-prime/rancher \
   --namespace cattle-system \
   --set hostname=rancher.my.org
 ----
@@ -183,7 +149,7 @@ If you deploy Rancher through the AWS Marketplace, the deployment name is 'ranch
 Thus:
 
 ----
-helm upgrade rancher-stable rancher-<CHART_REPO>/rancher \
+helm upgrade rancher-stable rancher-prime/rancher \
   --namespace cattle-system \
   --set hostname=rancher.my.org
 ----
@@ -203,7 +169,7 @@ Alternatively, it's possible to export the current values to a file and referenc
 For Kubernetes v1.25 or later, set `global.cattle.psp.enabled` to `false` when using Rancher v2.7.2-v2.7.4. This is not necessary for Rancher v2.7.5 and above, but you can still manually set the option if you choose.
 +
 ----
- helm upgrade rancher rancher-<CHART_REPO>/rancher \
+ helm upgrade rancher rancher-prime/rancher \
    --namespace cattle-system \
    -f values.yaml \
    --version=2.6.8
