--- a/versions/latest/modules/en/pages/rancher-admin/users/authn-and-authz/configure-azure-ad.adoc
+++ b/versions/latest/modules/en/pages/rancher-admin/users/authn-and-authz/configure-azure-ad.adoc
@@ -2,7 +2,7 @@
 
 == Microsoft Graph API
 
-Microsoft Graph API is now the flow through which you will set up Azure AD. The below sections will assist <<_new_user_setup,new users>> in configuring Azure AD with a new instance as well as assist existing Azure app owners in <<migrating-from-azure-ad-graph-api-to-microsoft-graph-api,migrating to the new flow>>.
+Microsoft Graph API is now the flow through which you will set up Azure AD. The below sections will assist <<_new_user_setup,new users>> in configuring Azure AD with a new instance as well as assist existing Azure app owners in <<_migrating_from_azure_ad_graph_api_to_microsoft_graph_api,migrating to the new flow>>.
 
 The Microsoft Graph API flow in Rancher is constantly evolving. We recommend that you use the latest patched version of 2.7, as it is still in active development and will continue to receive new features and improvements.
 
@@ -155,7 +155,7 @@ image:app-configuration.png[Application ID]
  .. If you aren't already there, use search to open *App registrations*.
  .. In *Overview*, find the entry you created for Rancher.
  .. Copy the *Application (Client) ID* and paste it into Rancher as your *Application ID*.
-. In most cases, your endpoint options will either be <<_global,Standard>> or <<china,China>>. For either of these options, you only need to enter the *Tenant ID*, *Application ID*, and *Application Secret*.
+. In most cases, your endpoint options will either be <<_global,Standard>> or <<_china,China>>. For either of these options, you only need to enter the *Tenant ID*, *Application ID*, and *Application Secret*.
 
 image:tenant-application-id-secret.png[Standard Endpoint Options]
 
@@ -395,7 +395,7 @@ image:auth-setup-azure-ad-filter.png[Adding a group membership filter to Azure A
 
 
 * The https://docs.microsoft.com/en-us/graph/migrate-azure-ad-graph-overview[Azure AD Graph API] is deprecated and will be retired by Microsoft at any time after June 30, 2023, without advance notice. We will update our docs to advise the community when it is retired. Rancher now uses the https://docs.microsoft.com/en-us/graph/use-the-api[Microsoft Graph API] as the new flow to set up Azure AD as the external auth provider.
-* If you're a new user, or wish to migrate, refer to the new flow instructions for <<_microsoft_graph_api/,Rancher v2.7.0+>>.
+* If you're a new user, or wish to migrate, refer to the new flow instructions for <<_microsoft_graph_api,Rancher v2.7.0+>>.
 * If you don't wish to upgrade to v2.7.0+ after the Azure AD Graph API is retired, you'll need to either:
  ** Use the built-in Rancher auth or
  ** Use another third-party auth system and set that up in Rancher. Please see the xref:rancher-admin/users/authn-and-authz/authn-and-authz.adoc[authentication docs] to learn how to configure other open authentication providers.
