--- a/versions/latest/modules/en/pages/cluster-deployment/infra-providers/aws/aws.adoc
+++ b/versions/latest/modules/en/pages/cluster-deployment/infra-providers/aws/aws.adoc
@@ -7,7 +7,7 @@ First, you will set up your EC2 cloud credentials in Rancher. Then you will use 
 
 Then you will create an EC2 cluster in Rancher, and when configuring the new cluster, you will define node pools for it. Each node pool will have a Kubernetes role of etcd, controlplane, or worker. Rancher will install RKE Kubernetes on the new nodes, and it will set up each node with the Kubernetes role defined by the node pool.
 
-=== Prerequisites
+== Prerequisites
 
 * *AWS EC2 Access Key and Secret Key* that will be used to create the instances. See https://docs.aws.amazon.com/IAM/latest/UserGuide/id_credentials_access-keys.html#Using_CreateAccessKey[Amazon Documentation: Creating Access Keys] how to create an Access Key and Secret Key.
 * *IAM Policy created* to add to the user of the Access Key And Secret Key. See https://docs.aws.amazon.com/IAM/latest/UserGuide/access_policies_create.html#access_policies_create-start[Amazon Documentation: Creating IAM Policies (Console)] how to create an IAM policy. See our three example JSON policies below:
