--- a/versions/latest/modules/en/pages/cluster-deployment/infra-providers/aws/machine-configuration.adoc
+++ b/versions/latest/modules/en/pages/cluster-deployment/infra-providers/aws/machine-configuration.adoc
@@ -2,6 +2,8 @@
 
 For more details about EC2 nodes, refer to the official documentation for the https://aws.amazon.com/ec2[EC2 Management Console].
 
+== Basic Options
+
 === Region
 
 The geographical https://docs.aws.amazon.com/AWSEC2/latest/UserGuide/using-regions-availability-zones.html[region] in which to build your cluster.
