--- a/versions/latest/modules/en/pages/cluster-deployment/infra-providers/digitalocean/machine-configuration.adoc
+++ b/versions/latest/modules/en/pages/cluster-deployment/infra-providers/digitalocean/machine-configuration.adoc
@@ -2,30 +2,30 @@
 
 For more details about DigitalOcean, Droplets, refer to the https://docs.digitalocean.com/products/compute/[official documentation].
 
-=== Region
+== Region
 
 Configure the https://docs.digitalocean.com/glossary/region/[region] where Droplets are created.
 
-=== Size
+== Size
 
 Configure the https://docs.digitalocean.com/products/droplets/resources/choose-plan/[size] of Droplets.
 
-=== OS Image
+== OS Image
 
 Configure the operating system https://docs.digitalocean.com/products/images/[image] Droplets are created from.
 
-=== Monitoring
+== Monitoring
 
 Enable the DigitalOcean agent for additional https://docs.digitalocean.com/products/monitoring/[monitoring].
 
-=== IPv6
+== IPv6
 
 Enable IPv6 for Droplets.
 
-=== Private Networking
+== Private Networking
 
 Enable private networking for Droplets.
 
-=== Droplet Tags
+== Droplet Tags
 
 Apply a tag (label) to a Droplet. Tags may only contain letters, numbers, colons, dashes, and underscores. For example, `my_server`.
