--- a/versions/latest/modules/en/pages/installation-and-upgrade/other-installation-methods/http-proxy/install-rancher.adoc
+++ b/versions/latest/modules/en/pages/installation-and-upgrade/other-installation-methods/http-proxy/install-rancher.adoc
@@ -2,7 +2,7 @@
 
 Now that you have a running RKE cluster, you can install Rancher in it. For security reasons all traffic to Rancher must be encrypted with TLS. For this tutorial you are going to automatically issue a self-signed certificate through https://cert-manager.io/[cert-manager]. In a real-world use-case you will likely use Let's Encrypt or provide your own certificate.
 
-=== Install the Helm CLI+++<DeprecationHelm2>++++++</DeprecationHelm2>+++
+== Install the Helm CLI
 
 Install the https://helm.sh/docs/intro/install/[Helm] CLI on a host where you have a kubeconfig to access your Kubernetes cluster:
 
@@ -12,7 +12,7 @@ chmod +x get_helm.sh
 sudo ./get_helm.sh
 ----
 
-=== Install cert-manager
+== Install cert-manager
 
 Add the cert-manager Helm repository:
 
@@ -56,7 +56,7 @@ kubectl rollout status deployment -n cert-manager cert-manager
 kubectl rollout status deployment -n cert-manager cert-manager-webhook
 ----
 
-=== Install Rancher
+== Install Rancher
 
 Next you can install Rancher itself. First, add the Helm repository:
 
@@ -95,7 +95,7 @@ If you don't intend to send telemetry data, opt out xref:faq/telemetry.adoc[tele
 ====
 
 
-=== Additional Resources
+== Additional Resources
 
 These resources could be helpful when installing Rancher:
 
