--- a/versions/latest/modules/en/pages/observability/istio/guides/enable-istio-in-namespace.adoc
+++ b/versions/latest/modules/en/pages/observability/istio/guides/enable-istio-in-namespace.adoc
@@ -20,11 +20,11 @@ To enable Istio in a namespace, the cluster must have Istio installed.
 
 *Result:* The namespace now has the label `istio-injection=enabled`. All new workloads deployed in this namespace will have the Istio sidecar injected by default.
 
-=== Verifying that Automatic Istio Sidecar Injection is Enabled
+== Verifying that Automatic Istio Sidecar Injection is Enabled
 
 To verify that Istio is enabled, deploy a hello-world workload in the namespace. Go to the workload and click the pod name. In the *Containers* section, you should see the `istio-proxy` container.
 
-=== Excluding Workloads from Being Injected with the Istio Sidecar
+== Excluding Workloads from Being Injected with the Istio Sidecar
 
 If you need to exclude a workload from getting injected with the Istio sidecar, use the following annotation on the workload:
 
@@ -49,5 +49,4 @@ To add the annotation to a workload,
 If you are having issues with a Job you deployed not completing, you will need to add this annotation to your pod using the provided steps. Since Istio Sidecars run indefinitely, a Job cannot be considered complete even after its task has completed.
 ====
 
-
-=== xref:observability/istio/guides/use-istio-sidecar.adoc[Next: Add Deployments with the Istio Sidecar]
+== xref:observability/istio/guides/use-istio-sidecar.adoc[Next: Add Deployments with the Istio Sidecar]
