--- a/versions/latest/modules/en/pages/rancher-admin/global-configuration/provisioning-drivers/manage-cluster-drivers.adoc
+++ b/versions/latest/modules/en/pages/rancher-admin/global-configuration/provisioning-drivers/manage-cluster-drivers.adoc
@@ -4,7 +4,7 @@ Cluster drivers are used to create clusters in a xref:cluster-deployment/hosted-
 
 If there are specific cluster drivers that you do not want to show your users, you may deactivate those cluster drivers within Rancher and they will not appear as an option for cluster creation.
 
-=== Managing Cluster Drivers
+== Managing Cluster Drivers
 
 [NOTE]
 .Prerequisites:
