--- a/versions/latest/modules/en/pages/cluster-admin/manage-clusters/persistent-storage/examples/vsphere-storage.adoc
+++ b/versions/latest/modules/en/pages/cluster-admin/manage-clusters/persistent-storage/examples/vsphere-storage.adoc
@@ -5,11 +5,11 @@ To provide stateful workloads with VMware vSphere storage, we recommend creating
 
 In order to dynamically provision storage in vSphere, the vSphere provider must be enabled. See the following pages for more: xref:cluster-deployment/set-up-cloud-providers/configure-out-of-tree-vsphere.adoc[Out-of-tree vSphere] and xref:cluster-deployment/set-up-cloud-providers/configure-in-tree-vsphere.adoc[in-tree vSphere].
 
-=== Prerequisites
+== Prerequisites
 
 In order to provision vSphere volumes in a cluster created with the xref:cluster-deployment/launch-kubernetes-with-rancher.adoc[Rancher Kubernetes Engine (RKE)], the https://rancher.com/docs/rke/latest/en/config-options/cloud-providers/vsphere[vSphere cloud provider] must be explicitly enabled in the xref:cluster-deployment/configuration/rke1.adoc[cluster options].
 
-=== Creating a StorageClass
+== Creating a StorageClass
 
 [TIP]
 ====
@@ -30,7 +30,7 @@ image:vsphere-storage-class.png[]
 . Optionally, specify additional properties for this storage class under *Parameters*. Refer to the https://github.com/vmware-archive/vsphere-storage-for-kubernetes/blob/master/documentation/storageclass.md[vSphere storage documentation] for details.
 . Click *Create*.
 
-=== Creating a Workload with a VMware vSphere Volume
+== Creating a Workload with a VMware vSphere Volume
 
 . In the left navigation bar, click *Workload*.
 . Click *Create*.
@@ -42,7 +42,7 @@ image:vsphere-storage-class.png[]
 . Assign a path in the *Mount Point* field. This is the full path where the volume will be mounted in the container file system, e.g. `/persistent`.
 . Click *Create*.
 
-=== Verifying Persistence of the Volume
+== Verifying Persistence of the Volume
 
 . In the left navigation bar, click menu:Workload[Pods].
 . Go to the workload you just created and click *⋮ > Execute Shell*.
@@ -57,7 +57,7 @@ image:vsphere-storage-class.png[]
 +
 image:workload-persistent-data.png[workload-persistent-data]
 
-=== Why to Use StatefulSets Instead of Deployments
+== Why to Use StatefulSets Instead of Deployments
 
 You should always use https://kubernetes.io/docs/concepts/workloads/controllers/statefulset/[StatefulSets] for workloads consuming vSphere storage, as this resource type is designed to address a VMDK block storage caveat.
 
@@ -65,7 +65,7 @@ Since vSphere volumes are backed by VMDK block storage, they only support an htt
 
 Even using a deployment resource with just a single replica may result in a deadlock situation while updating the deployment. If the updated pod is scheduled to a node different from where the existing pod lives, it will fail to start because the VMDK is still attached to the other node.
 
-=== Related Links
+== Related Links
 
 * https://github.com/vmware-archive/vsphere-storage-for-kubernetes/tree/master/documentation[vSphere Storage for Kubernetes]
 * https://kubernetes.io/docs/concepts/storage/persistent-volumes/[Kubernetes Persistent Volumes]
